--- a/Team.html
+++ b/Team.html
@@ -193,7 +193,7 @@ p {
     <name>Dr. Ying Han</name>
     <p>Ph.D., City University of Hong Kong</p>
     <p style="margin-bottom:10px;"></p>
-    <p>Research projects: In-situ TEM, Nano-mechancis</p>
+    <p><b>Research projects:</b><br>In-situ TEM, Nano-mechancis</p>
     <p style="margin-bottom:10px;"></p> 
     <p>Email: yinghan[at]psu.edu<br>
        Office: Millennium Science Complex<br></p>
@@ -201,7 +201,37 @@ p {
 </div>
 
 
+<hr size="10" width="70%" color="white">
+<p style="margin-bottom:30px;"></p> 
+<div class="header">
+  <h2>Graduate Student</h2>
+  <p style="margin-bottom:20px;"></p> 
+</div>
 
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Foster Feni.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Dr. Ying Han</name>
+    <p>Ph.D., City University of Hong Kong</p>
+    <p style="margin-bottom:10px;"></p>
+    <p>Research projects: In-situ TEM, Nano-mechancis</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Email: yinghan[at]psu.edu<br>
+       Office: Millennium Science Complex<br></p>
+  </div>
+</div>
 
 <hr size="10" width="70%" color="white">
 <p style="margin-bottom:30px;"></p> 
