--- a/Team.html
+++ b/Team.html
@@ -223,12 +223,12 @@ p {
   </div>
   
   <div class="column middle">
-    <name>Dr. Ying Han</name>
-    <p>Ph.D., City University of Hong Kong</p>
+    <name>Foster Korsi Feni</name>
+    <p>M.Sc.Eng., Southern University and A&M College </p>
     <p style="margin-bottom:10px;"></p>
-    <p>Research projects: In-situ TEM, Nano-mechancis</p>
+    <p><b>Research projects:</b><br>Shape memory alloy</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: yinghan[at]psu.edu<br>
+    <p>Email: fkf5052[at]psu.edu<br>
        Office: Millennium Science Complex<br></p>
   </div>
 </div>
