--- a/Team.html
+++ b/Team.html
@@ -214,7 +214,7 @@ p {
       <div class="responsive">
         <div class="gallery">
          <div class="hj">
-            <img src="/assets/img/Foster Feni.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Foster.jpg" alt="People" width="400" height="400">
             <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
          </div>
         </div>
