--- a/Team.html
+++ b/Team.html
@@ -167,7 +167,8 @@ p {
     <p><b>Short Bio: </b>Dr. Yang joined in The Pennsylvania State University (University Park Campus) in June 2021 as an assistant professor. Dr. Yang conducted postdoctoral research at National Center for Electron Microscopy (NCEM) in Lawrence Berkeley National Laboratory between Jan 2019 - May 2021. He received a Ph.D. degree from the Department of Nuclear Science and Engineering at MIT in 2019. During his Ph.D. study, he was a visiting student at the Center for Functional Nanomaterials (CFN) at Brookhaven National Laboratory for more than two years to conduct in-situ environmental transmission electron microscopy studies. He received a B.Eng. degree from University of Science and Technology of China in 2012.</p>
   </div>
 </div>
-	
+
+<p style="margin-bottom:30px;"></p>
 <hr size="10" width="70%" color="white">
 <p style="margin-bottom:30px;"></p> 
 <div class="header">
@@ -201,6 +202,7 @@ p {
 </div>
 
 
+<p style="margin-bottom:30px;"></p>
 <hr size="10" width="70%" color="white">
 <p style="margin-bottom:30px;"></p> 
 <div class="header">
