--- a/Team.html
+++ b/Team.html
@@ -227,6 +227,10 @@ p {
   <div class="column middle">
     <name>Foster Korsi Feni</name>
     <p>M.Sc.Eng., Southern University and A&M College </p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p>Co-advised by <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=RFH13">Prof. Reginald Hamilton</p>
+      
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Shape memory alloy</p>
     <p style="margin-bottom:10px;"></p> 
