--- a/Team.html
+++ b/Team.html
@@ -229,7 +229,7 @@ p {
     <p>M.Sc.Eng., Southern University and A&M College </p>
 
     <p style="margin-bottom:10px;"></p>
-    <p>Co-advised by <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=RFH13">Prof. Reginald Hamilton</p>
+    <p>Co-advised by <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=RFH13">Prof. Reginald Hamilton</a></p>
 
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Shape memory alloy</p>
