--- a/Team.html
+++ b/Team.html
@@ -239,6 +239,69 @@ p {
   </div>
 </div>
 
+
+
+
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Jahangir.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>M. Jahangir Khan Lodhi</name>
+    <p>M.Sc.Eng., Central Michigan University</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p>Co-advised by <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=EXS36">Prof. Elzbieta Sikora</a></p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Corrosion, Additive Manufacturing</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Email: lodhi[at]psu.edu<br>
+       Office: Millennium Science Complex<br></p>
+  </div>
+</div>
+
+
+
+
+
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Yongwen.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/yongwen2.png" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Yongwen Sun</name>
+    <p>B.Eng., University of Science and Technology of China</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>4D-STEM</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Email: yms5374[at]psu.edu<br>
+       Office: Millennium Science Complex<br></p>
+  </div>
+</div>
 <hr size="10" width="70%" color="white">
 <p style="margin-bottom:30px;"></p> 
 </body>
