--- a/Team.html
+++ b/Team.html
@@ -240,7 +240,7 @@ p {
 </div>
 
 
-
+<p style="margin-bottom:30px;"></p>
 
 
 <div class="row">
@@ -273,7 +273,7 @@ p {
 </div>
 
 
-
+<p style="margin-bottom:30px;"></p>
 
 
 
@@ -284,7 +284,7 @@ p {
         <div class="gallery">
          <div class="hj">
             <img src="/assets/img/Yongwen.jpg" alt="People" width="400" height="400">
-            <img src="/assets/img/yongwen2.png" class="img-hover" alt="People" width="400" height="400">
+            <img src="/assets/img/Yongwen2.jpg" class="img-hover" alt="People" width="400" height="400">
          </div>
         </div>
       </div>
