--- a/Team.html
+++ b/Team.html
@@ -183,7 +183,7 @@ p {
         <div class="gallery">
          <div class="hj">
             <img src="/assets/img/YingHan.jpg" alt="People" width="400" height="400">
-            <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
+            <img src="/assets/img/Ying.jpg" class="img-hover" alt="People" width="400" height="400">
          </div>
         </div>
       </div>
