--- a/Team.html
+++ b/Team.html
@@ -240,7 +240,7 @@ p {
 </div>
 
 
-<p style="margin-bottom:30px;"></p>
+<p style="margin-bottom:50px;"></p>
 
 
 <div class="row">
@@ -273,7 +273,7 @@ p {
 </div>
 
 
-<p style="margin-bottom:30px;"></p>
+<p style="margin-bottom:50px;"></p>
 
 
 
@@ -302,6 +302,49 @@ p {
        Office: Millennium Science Complex<br></p>
   </div>
 </div>
+
+
+
+
+
+
+
+<p style="margin-bottom:30px;"></p>
+<hr size="10" width="70%" color="white">
+<p style="margin-bottom:30px;"></p> 
+<div class="header">
+  <h2>Undergraduate Student</h2>
+  <p style="margin-bottom:20px;"></p> 
+</div>
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Yongwen.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Yongwen2.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Justin Darren Rech</name>
+    <p>Engineering Science and Mechanics, <br>
+    The Pennsylvania State University</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Nano-mechanics</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Email: jdr5728[at]psu.edu<br>
+       Office: TBD<br></p>
+  </div>
+</div>
+
+
 <hr size="10" width="70%" color="white">
 <p style="margin-bottom:30px;"></p> 
 </body>
