--- a/Team.html
+++ b/Team.html
@@ -323,8 +323,8 @@ p {
       <div class="responsive">
         <div class="gallery">
          <div class="hj">
-            <img src="/assets/img/Yongwen.jpg" alt="People" width="400" height="400">
-            <img src="/assets/img/Yongwen2.jpg" class="img-hover" alt="People" width="400" height="400">
+            <img src="/assets/img/logo1.png" alt="People" width="400" height="400">
+            <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
          </div>
         </div>
       </div>
