--- a/Team.html
+++ b/Team.html
@@ -146,7 +146,7 @@ p {
         <div class="gallery">
          <div class="hj">
             <img src="/assets/img/YangYang.jpg" alt="Yang Yang" width="400" height="400">
-            <img src="/assets/img/oxidation.gif" class="img-hover" alt="Yang Yang" width="400" height="400">
+            <img src="/assets/img/YY.jpg" class="img-hover" alt="Yang Yang" width="400" height="400">
          </div>
         </div>
       </div>
