--- a/Team.html
+++ b/Team.html
@@ -160,7 +160,7 @@ p {
     <p>Email: yang[at]psu.edu<br>
        Phone: +1-814-865-5070<br>
        Office: N243, Millennium Science Complex<br>
-       <a href="https://linkedin.com/in/yang-yang-823181129">LinkedIn</a> | <a href="http://yang.mit.edu">Personal Website</a> | <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=yan5018">PSU Profile</a></p>
+       <a href="https://linkedin.com/in/yang-yang-823181129">LinkedIn</a> | <a href="http://yang.mit.edu">Personal Website</a> | <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=yan5018">PSU Directory</a></p>
   </div>
 
   <div class="column bio">
