--- a/Research.html
+++ b/Research.html
@@ -114,7 +114,7 @@ div.desc {
 <body>
 <div class="header">
   <h2>About</h2>
-  <p>Our research focuses on the integration of advanced electron microscopy and advanced modeling to provide revealing mechanistic insights into  <b>extreme materials</b>, which include materials under extreme enviornments, and materials with extreme performance. Further, we aim to leverage these fundamental understandings to enable materials with extrodinary properties, that can significantly enhance the feasibility and reliability of next-generation energy and transportation systems.</p>
+  <p>Our research focuses on the integration of advanced electron microscopy and advanced modeling to provide revealing mechanistic insights into  <b>extreme materials</b>, which include materials under extreme enviornments, and materials with extreme performance. Further, we aim to leverage these fundamental understandings to enable materials with extraodinary properties, that can significantly enhance the feasibility and reliability of next-generation energy and transportation systems.</p>
   <hr size="10" width="70%" color="white">
 </div>
 
