--- a/Team.html
+++ b/Team.html
@@ -157,7 +157,7 @@ p {
     <name>Prof. Yang Yang</name>
     <p>Assistant Professor, Department of Engineering Science and Mechanics & Materials Research Institute, The Pennsylvania State University</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: yang[at]psu.edu<br>
+    <p>Email: <a href="mailto:yang@psu.edu">yang@psu.edu</a><br>
        Phone: +1-814-865-5070<br>
        Office: N243, Millennium Science Complex<br>
        <a href="https://linkedin.com/in/yang-yang-823181129">LinkedIn</a> | <a href="http://yang.mit.edu">Personal Website</a> | <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=yan5018">PSU Directory</a></p>
@@ -196,8 +196,7 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>In-situ TEM, Nano-mechancis</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: yinghan[at]psu.edu<br>
-       Office: Millennium Science Complex<br></p>
+    <p>Office: Millennium Science Complex<br></p>
   </div>
 </div>
 
@@ -234,8 +233,7 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Shape memory alloy</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: fkf5052[at]psu.edu<br>
-       Office: Millennium Science Complex<br></p>
+    <p>Office: Millennium Science Complex<br></p>
   </div>
 </div>
 
@@ -267,8 +265,7 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Corrosion, Additive Manufacturing</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: lodhi[at]psu.edu<br>
-       Office: Millennium Science Complex<br></p>
+    <p>Office: Millennium Science Complex<br></p>
   </div>
 </div>
 
@@ -298,8 +295,7 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>4D-STEM</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: yms5374[at]psu.edu<br>
-       Office: Millennium Science Complex<br></p>
+    <p>Office: Millennium Science Complex<br></p>
   </div>
 </div>
 
@@ -339,8 +335,7 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Nano-mechanics</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Email: jdr5728[at]psu.edu<br>
-       Office: TBD<br></p>
+    <p>Office: TBD<br></p>
   </div>
 </div>
 
