--- a/Team.html
+++ b/Team.html
@@ -248,7 +248,7 @@ p {
         <div class="gallery">
          <div class="hj">
             <img src="/assets/img/Jahangir.jpg" alt="People" width="400" height="400">
-            <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
+            <img src="/assets/img/Jahangir2.jpg" class="img-hover" alt="People" width="400" height="400">
          </div>
         </div>
       </div>
