--- a/Team.html
+++ b/Team.html
@@ -340,6 +340,48 @@ p {
 </div>
 
 
+
+
+
+
+
+
+<p style="margin-bottom:60px;"></p>
+<hr size="10" width="70%" color="white">
+<p style="margin-bottom:30px;"></p> 
+<div class="header">
+  <h2>Alumni</h2>
+  <p style="margin-bottom:50px;"></p> 
+</div>
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/CapstoneFA21-icon.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/logo1.png" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Capston Project Team Fall 2021</name>
+    <p><b>Team members:</b><br>
+    Madeline Cannon, Weipeng Hu, Joshua Haines, Jack Jenny, Arpit Singla, Shuhao Xu, and Qifan Yang</p>
+
+    <p style="margin-bottom:10px;"></p> 
+    <p>Co-advised by <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=EXS36">Prof. Elzbieta Sikora</a></p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Projects:</b><br>Machine-learning enabled classification of material defects in transmission electron microscopy images</p>
+  </div>
+</div>
+
+
 <hr size="10" width="70%" color="white">
 <p style="margin-bottom:30px;"></p> 
 </body>
