--- a/Team.html
+++ b/Team.html
@@ -374,7 +374,7 @@ p {
     Madeline Cannon, Weipeng Hu, Joshua Haines, Jack Jenny, Arpit Singla, Shuhao Xu, and Qifan Yang</p>
 
     <p style="margin-bottom:10px;"></p> 
-    <p>Co-advised by <a href="https://www.esm.psu.edu/department/directory-detail-g.aspx?q=EXS36">Prof. Elzbieta Sikora</a></p>
+    <p>Co-advised by <a href="https://www.nuce.psu.edu/department/directory-detail-g.aspx?q=mjj5508">Prof. Mia Jin</a></p>
 
     <p style="margin-bottom:10px;"></p>
     <p><b>Projects:</b><br>Machine-learning enabled classification of material defects in transmission electron microscopy images</p>
