--- a/Team.html
+++ b/Team.html
@@ -371,7 +371,7 @@ p {
   <div class="column middle">
     <name>Capston Project Team Fall 2021</name>
     <p><b>Team members:</b><br>
-    Madeline Cannon, Weipeng Hu, Joshua Haines, Jack Jenny, Arpit Singla, Shuhao Xu, and Qifan Yang</p>
+    Madeline Cannon (MatSE), Weipeng Hu (CMPSC), Joshua Haines (CMPSC), Jack Jenny (ME), Arpit Singla (CMPSC), Shuhao Xu (CMPSC), and Qifan Yang (CMPSC)</p>
 
     <p style="margin-bottom:10px;"></p> 
     <p>Co-advised by <a href="https://www.nuce.psu.edu/department/directory-detail-g.aspx?q=mjj5508">Prof. Mia Jin</a></p>
