Update photo add new member
Update photo add new member

--- a/Team.html
+++ b/Team.html
@@ -301,7 +301,82 @@ p {
 
 
 
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Zhiyu-0.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Zhiyu-1.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Zhiyu Zhang</name>
+    <p>B.Eng. & M.Sc.Eng., The Pennsylvania State University</p>
 
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Nano-mechanics, Modeling of ion irradiation</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: Millennium Science Complex<br></p>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Yuxi-0.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Yuxi-1.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Yuxi Zhang</name>
+    <p>B.Eng., Wuhan University Of Technology, China</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>4D-STEM, In-situ TEM</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: Millennium Science Complex<br></p>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Yingxin-0.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Yingxin-1.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Yingxin Zhu</name>
+    <p>B.Eng., City University of Hong Kong</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Elastic Strain Engineering</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: Millennium Science Complex<br></p>
+  </div>
+</div>
 
 
 
