--- a/Team.html
+++ b/Team.html
@@ -299,7 +299,7 @@ p {
   </div>
 </div>
 
-
+<p style="margin-bottom:50px;"></p>
 
 <div class="row">
   <div class="column side">
@@ -327,6 +327,12 @@ p {
 </div>
 
 
+
+
+<p style="margin-bottom:50px;"></p>
+
+
+
 <div class="row">
   <div class="column side">
     <div class="ma">
@@ -351,6 +357,10 @@ p {
     <p>Office: Millennium Science Complex<br></p>
   </div>
 </div>
+
+
+<p style="margin-bottom:50px;"></p>
+
 
 
 <div class="row">
