new year new member
new year new member

--- a/Team.html
+++ b/Team.html
@@ -388,7 +388,36 @@ p {
   </div>
 </div>
 
+<p style="margin-bottom:50px;"></p>
 
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/HK.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/HK2.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Hyeonwoo Kim</name>
+    <p>Visiting Ph.D. student, Hanyang University, South Korea</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p>Co-advised by <a href="https://www.nuce.psu.edu/department/directory-detail-g.aspx?q=mjj5508">Prof. Mia Jin</a></p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Modeling of irradiation damage in metals and alloys</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: Hallowell Bldg<br></p>
+  </div>
+</div>
 
 <p style="margin-bottom:60px;"></p>
 <hr size="10" width="70%" color="white">
