--- a/Team.html
+++ b/Team.html
@@ -410,7 +410,7 @@ p {
     <p>Visiting Ph.D. student, Hanyang University, South Korea</p>
 
     <p style="margin-bottom:10px;"></p>
-    <p>Co-advised by <a href="https://www.nuce.psu.edu/department/directory-detail-g.aspx?q=mjj5508">Prof. Mia Jin</a></p>
+    <p>Co-advised by <a href="https://www.nuce.psu.edu/department/directory-detail-g.aspx?q=mjj5508">Prof. Mia Jin</a> and <a href="https://scholar.google.com/citations?user=Djhzk_UAAAAJ&hl=en">Prof. Sangtae Kim</a></p>
 
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Modeling of irradiation damage in metals and alloys</p>
