--- a/Team.html
+++ b/Team.html
@@ -388,8 +388,14 @@ p {
   </div>
 </div>
 
-<p style="margin-bottom:50px;"></p>
 
+<p style="margin-bottom:60px;"></p>
+<hr size="10" width="70%" color="white">
+<p style="margin-bottom:30px;"></p> 
+<div class="header">
+  <h2>Visiting scholar</h2>
+  <p style="margin-bottom:50px;"></p> 
+</div>
 
 <div class="row">
   <div class="column side">
@@ -407,7 +413,7 @@ p {
   
   <div class="column middle">
     <name>Hyeonwoo Kim</name>
-    <p>Visiting Ph.D. student, Hanyang University, South Korea</p>
+    <p>Visiting Ph.D. student from Hanyang University, South Korea</p>
 
     <p style="margin-bottom:10px;"></p>
     <p>Co-advised by <a href="https://www.nuce.psu.edu/department/directory-detail-g.aspx?q=mjj5508">Prof. Mia Jin</a> and <a href="https://scholar.google.com/citations?user=Djhzk_UAAAAJ&hl=en">Prof. Sangtae Kim</a></p>
