Update new member and news

--- a/Team.html
+++ b/Team.html
@@ -247,6 +247,36 @@ p {
       <div class="responsive">
         <div class="gallery">
          <div class="hj">
+            <img src="/assets/img/LD-1.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/LD-2.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Lei Ding</name>
+    <p>M.Sc.Eng., Xi'an Jiaotong University</p>
+
+    <p style="margin-bottom:10px;"></p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Corrosion</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: Millennium Science Complex<br></p>
+  </div>
+</div>
+
+<p style="margin-bottom:50px;"></p>
+
+
+<div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
             <img src="/assets/img/Jahangir.jpg" alt="People" width="400" height="400">
             <img src="/assets/img/Jahangir2.jpg" class="img-hover" alt="People" width="400" height="400">
          </div>
