Add new members

--- a/Team.html
+++ b/Team.html
@@ -433,6 +433,78 @@ p {
 </div>
 
 <div class="row">
+
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Ulises.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Ulises-volcano.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Ulises Henriquez</name>
+    <p>Nuclear Engineering, <br>
+    The Pennsylvania State University</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Nano-mechanics</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: TBD<br></p>
+  </div>
+
+  <div class="row">
+  <div class="column side">
+    <div class="ma">
+      <div class="responsive">
+        <div class="gallery">
+         <div class="hj">
+            <img src="/assets/img/Yiwei-2.jpg" alt="People" width="400" height="400">
+            <img src="/assets/img/Yiwei.jpg" class="img-hover" alt="People" width="400" height="400">
+         </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="column middle">
+    <name>Yiwei Pu</name>
+    <p>Mechanical Engineering, <br>
+    The Pennsylvania State University</p>
+
+    <p style="margin-bottom:10px;"></p>
+    <p><b>Research projects:</b><br>Nano-mechanics</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p>Office: TBD<br></p>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+<p style="margin-bottom:60px;"></p>
+<hr size="10" width="70%" color="white">
+<p style="margin-bottom:30px;"></p> 
+<div class="header">
+  <h2>Alumni</h2>
+  <p style="margin-bottom:50px;"></p> 
+</div>
+
+
+
+<div class="row">
+
+
   <div class="column side">
     <div class="ma">
       <div class="responsive">
@@ -456,24 +528,7 @@ p {
     <p style="margin-bottom:10px;"></p> 
     <p>Office: TBD<br></p>
   </div>
-</div>
 
-
-
-
-
-
-
-
-<p style="margin-bottom:60px;"></p>
-<hr size="10" width="70%" color="white">
-<p style="margin-bottom:30px;"></p> 
-<div class="header">
-  <h2>Alumni</h2>
-  <p style="margin-bottom:50px;"></p> 
-</div>
-
-<div class="row">
   <div class="column side">
     <div class="ma">
       <div class="responsive">
