--- a/Team.html
+++ b/Team.html
@@ -453,10 +453,12 @@ p {
     The Pennsylvania State University</p>
 
     <p style="margin-bottom:10px;"></p>
-    <p><b>Research projects:</b><br>Nano-mechanics</p>
+    <p><b>Research projects:</b><br>Green steel making</p>
     <p style="margin-bottom:10px;"></p> 
     <p>Office: TBD<br></p>
   </div>
+
+  <p style="margin-bottom:50px;"></p>
 
   <div class="row">
   <div class="column side">
@@ -478,7 +480,7 @@ p {
     The Pennsylvania State University</p>
 
     <p style="margin-bottom:10px;"></p>
-    <p><b>Research projects:</b><br>Nano-mechanics</p>
+    <p><b>Research projects:</b><br>Corrosion</p>
     <p style="margin-bottom:10px;"></p> 
     <p>Office: TBD<br></p>
   </div>
@@ -541,6 +543,8 @@ p {
       </div>
     </div>
   </div>
+
+  <p style="margin-bottom:50px;"></p>
   
   <div class="column middle">
     <name>Capston Project Team Fall 2021</name>
