--- a/Team.html
+++ b/Team.html
@@ -444,7 +444,6 @@ p {
 
 
 <div class="row">
-
   <div class="column side">
     <div class="ma">
       <div class="responsive">
@@ -468,10 +467,11 @@ p {
     <p style="margin-bottom:10px;"></p> 
     <p>Office: TBD<br></p>
   </div>
+</div>
 
   <p style="margin-bottom:50px;"></p>
 
-  
+<div class="row">
   <div class="column side">
     <div class="ma">
       <div class="responsive">
@@ -540,7 +540,10 @@ p {
     <p style="margin-bottom:10px;"></p> 
     <p>Office: TBD<br></p>
   </div>
+</div>
 
+
+<div class="row">
   <div class="column side">
     <div class="ma">
       <div class="responsive">
