--- a/Team.html
+++ b/Team.html
@@ -538,7 +538,8 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Nano-mechanics</p>
     <p style="margin-bottom:10px;"></p> 
-    
+    <p>Undergraduate researcher at (EM)^2 Lab<br></p>
+    <p>(2022 - 2023)<br></p>
   </div>
 </div>
 
