--- a/Team.html
+++ b/Team.html
@@ -538,7 +538,8 @@ p {
     <p style="margin-bottom:10px;"></p>
     <p><b>Research projects:</b><br>Nano-mechanics</p>
     <p style="margin-bottom:10px;"></p> 
-    <p>Undergraduate researcher at (EM)^2 Lab (2022 - 2023)<br></p>
+    <p><b>Experience at (EM)^2 Lab:</b><br></p>
+    <p>Undergraduate researcher (2022 - 2023)</p>
   </div>
 </div>
 
