--- a/Team.html
+++ b/Team.html
@@ -536,10 +536,12 @@ p {
     The Pennsylvania State University</p>
 
     <p style="margin-bottom:10px;"></p>
-    <p><b>Research projects:</b><br>Nano-mechanics</p>
+    <p><b>Research projects:</b>Nano-mechanics</p>
     <p style="margin-bottom:10px;"></p> 
     <p><b>Experience at (EM)^2 Lab:</b><br></p>
     <p>Undergraduate researcher (2022 - 2023)</p>
+    <p style="margin-bottom:10px;"></p> 
+    <p><b>Currently:</b>Project Engineer at Granite Construction.</p> 
   </div>
 </div>
 
